--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -146,7 +146,7 @@
 				<th scope="row">7</th>
 				<td>25 listopada 2024</td>
 				<td class="schedule-lecture">Zajęcia 6</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">wykład prof. Rynarzewskiej nt. teatru koreańskiego</td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -154,11 +154,11 @@
 				<th scope="row" rowspan="2">8</th>
 				<td rowspan="2">2 grudnia 2024</td>
 				<td class="schedule-exam">Kolokwium 2</td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">K-pop, filmy</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 7</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/6">teatr</a></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -190,11 +190,11 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 2</td>
-				<td class="schedule-presentation">Diana Grigoryan</td>
+				<td class="schedule-presentation">Diana Grigoryan - Analiza koreańskiego społeczeństwa na podstawie filmu <i>Parasite</i></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 3</td>
-				<td class="schedule-presentation">Miłosz Madoń</td>
+				<td class="schedule-presentation">Miłosz Madoń - Społeczne problemy szkolnej młodzież na przykładzie filmów <i>Han Gong-ju</i> i <i>Sala Samobójców</i></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 4</td>
@@ -206,7 +206,7 @@
 				<th scope="row" rowspan="5">12</th>
 				<td rowspan="5">20 stycznia 2025</td>
 				<td class="schedule-presentation">Prezentacja 4</td>
-				<td class="schedule-presentation">Sofiia Martynenko</td>
+				<td class="schedule-presentation">Sofiia Martynenko - Symboliczne znaczenie ryżu i chleba w literaturze, sztuce oraz historii Korei i Ukrainy</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 5</td>
