--- a/uj/zajecia/24-25z/ljk4/zajecia/3/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/3/index.html
@@ -242,232 +242,228 @@
 	</ol>
 </div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h2>[13~15]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h2> -->
-	<!-- <h3>13.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(가) .</p> -->
-		<!-- <p>(나) .</p> -->
-		<!-- <p>(다) .</p> -->
-		<!-- <p>(라) .</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>14.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(가) .</p> -->
-		<!-- <p>(나) .</p> -->
-		<!-- <p>(다) .</p> -->
-		<!-- <p>(라) .</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>15.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(가) .</p> -->
-		<!-- <p>(나) .</p> -->
-		<!-- <p>(다) .</p> -->
-		<!-- <p>(라) .</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[13~15]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h2>
+	<h3>13.</h3>
+	<ul>
+		<li>보물 - skarb</li>
+		<li>팥 - pole</li>
+		<li>파다 - kopać</li>
+		<li>실망하다 - doznać zawodu</li>
+		<li>아깝다 - być szkoda</li>
+		<li>씨 - nasiono</li>
+		<li>뿌리다 - rozsypać, zasiać</li>
+		<li>농부 - rolnik</li>
+		<li>게으르다 - być leniwym</li>
+		<li>숨기다 - ukryć</li>
+		<li>남기다 - pozostawić</li>
+		<li>흐르다 - płynąć</li>
+		<li>열매 - owoc</li>
+		<li>맺히다 - wypuścić (np. owoce)</li>
+		<li>뜻 - znaczenie, sens (słów)</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>(가) 아들은 보물을 찾기 위해 팥을 파 봤지만 아무것도 나오지 않았다.</p>
+		<p>(나) 아들은 실망했지만 힘들게 밭을 판 것이 아까워서 밭에 씨를 뿌렸다.</p>
+		<p>(다) 한 농부가 게으른 아들에게 밭에 보물을 숨겼다는 말을 남기고 죽었다.</p>
+		<p>(라) 시간이 흘러 많은 열매가 맺혔고 아들은 그때서야 아버지의 뜻을 알게 되었다.</p>
+	</div>
+	<ol>
+		<li>(가)-(라)-(나)-(다)</li>
+		<li>(가)-(나)-(라)-(다)</li>
+		<li>(다)-(가)-(나)-(라)</li>
+		<li>(다)-(나)-(가)-(라)</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>14.</h3>
+	<ul>
+		<li>정부 - rząd</li>
+		<li>건의하다 - zasugerować, zaproponować</li>
+		<li>활용하다 - wykorzystywać</li>
+		<li>신문고 - sinmungo (rodzaj bębna w czasach Joseon)</li>
+		<li>역할 - rola</li>
+		<li>북 - bęben</li>
+		<li>설치하다 - zainstalować, zamocować</li>
+		<li>노력 - wysiłek, starania</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>(가) 정부에 건의할 내용이 있을 때 이곳을 활용할 수 있다.</p>
+		<p>(나) 오늘날에는 '인터넷 신문고'가 이러한 역할을 하고 있다.</p>
+		<p>(다) 과거에는 '신문고'라는 북을 설치해서 국민의 생각을 들었다.</p>
+		<p>(라) 이렇게 시대는 달라져도 국가가 국민의 생각을 들으려는 노력은 계속된다.</p>
+	</div>
+	<ol>
+		<li>(나)-(다)-(가)-(라)</li>
+		<li>(나)-(라)-(다)-(가)</li>
+		<li>(다)-(나)-(가)-(라)</li>
+		<li>(다)-(라)-(나)-(가)</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>15.</h3>
+	<ul>
+		<li>철 - pora</li>
+		<li>특히 - szczególnie</li>
+		<li>오미자</li>
+		<li>(이름을) 붙이다 - nadać imię/nazwę</li>
+		<li>땀 - pot</li>
+		<li>배탈 - niestrawność</li>
+		<li>효과 - skutek, efekt</li>
+		<li>무더위 - upał</li>
+		<li>지치다 - zmęczyć się (czymś), mieć dość</li>
+		<li>입맛 - smak</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>(가) 이것으로 만든 차는 여름철에 마시면 특히 좋다.</p>
+		<p>(나) 오미자는 다섯 가지 맛이 난다고 붙여진 이름이다.</p>
+		<p>(다) 땀이 나지 않게 하고 배탈을 낫게 하는 효과가 있어서이다.</p>
+		<p>(라) 또한 무더위에 지친 사람에게 입맛이 나게 하는 데도 도움이 된다.</p>
+	</div>
+	<ol>
+		<li>(가)-(라)-(다)-(나)</li>
+		<li>(가)-(다)-(라)-(나)</li>
+		<li>(나)-(가)-(다)-(라)</li>
+		<li>(나)-(다)-(가)-(라)</li>
+	</ol>
+</div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h2>[16~18]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2> -->
-	<!-- <h3>16.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>17.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>18.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[16~18]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
+	<h3>16.</h3>
+	<ul>
+		<li>환하다</li>
+		<li>둥글다 - być okrągłym</li>
+		<li>보름달 - pełny księżyc</li>
+		<li>반달 - półksiężyc</li>
+		<li>모양 - kształt</li>
+		<li>현재 - teraźniejszość</li>
+		<li>낫다 - być lepszym</li>
+		<li>밝다 - być jasnym</li>
+		<li>완전하다 - być pełnym</li>
+		<li>점점 - stopniowo</li>
+		<li>-는 데 반해 = -는 것과 반대로 - w odróżnieniu (od kogoś/czegoś)</li>
+		<li>이처럼 - w ten sposób, zgodnie z tym</li>
+		<li>발전하다 - rozwijać się</li>
+		<li>바라다 - pragnąć</li>
+		<li>희망 - nadzieja</li>
+		<li>어둡다 - być ciemnym</li>
+		<li>면 - strona</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>추석에는 환하고 둥근 보름달이 뜬다. 그런데 추석 때 먹는 송편은 보름달이 아닌 반달 모양이다. 이는 현재보다 더 나은 미래를 의미하기 때문이다. 즉 보름달은 밝고 완전한 모양이지만 시간이 지나면서 점점 작아지는 데 반해, 반달은 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;). 이처럼 송편의 반달 모양에는 앞으로 모든 일이 발전해 나가기를 바라는 희망이 담겨 있다.</p>
+	</div>
+	<ol>
+		<li>환하게 웃는 사람의 눈 모양과 비슷하다</li>
+		<li>보름달처럼 밝은 빛을 가지고 있지 않다</li>
+		<li>오래 지나지 않아 크고 환한 보름달이 된다</li>
+		<li>어두운 면과 밝은 면을 모두 포함하고 있다</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>17.</h3>
+	<ul>
+		<li>물건 - rzecz, przedmiot</li>
+		<li>봉사 - wolontariat</li>
+		<li>단체 - organizacja</li>
+		<li>기증하다 - podarować, oddać (w dobre ręce)</li>
+		<li>늘다 - zwiększać się</li>
+		<li>골라내다 - selekcjonować</li>
+		<li>인력 - siła robocza</li>
+		<li>비용 - koszt</li>
+		<li>소모되다 - zużywać się</li>
+		<li>고려하다 - wziąć pod uwagę</li>
+		<li>구입하다 = 사다</li>
+		<li>보관 - przechowywanie</li>
+		<li>재사용하다 = 다시 사용하다</li>
+		<li>곤란하다 - być trudnym/kłopotliwym/niezręcznym</li>
+		<li>용도 - sposób użycia</li>
+		<li>다양하다 - być różnym/różnorodnym</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>자신에게 필요하지 않는 물건을 봉사단체에 기증하는 시민들이 늘고 있다. 그런데 이러한 물건 중에 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 많다. 그래서 쓸 만한 물건을 골라내는 데 많은 인력과 비용이 소모된다. 물건을 기증할 때에는 다른 사람들이 다시 사용할 것이라는 점을 고려해야 할 것이다.</p>
+	</div>
+	<ol>
+		<li>구입하기 어려운 것이</li>
+		<li>보관이 쉽지 않은 것이</li>
+		<li>재사용하기 곤란한 것이</li>
+		<li>용도가 다양하지 않은 것이</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>18.</h3>
+	<ul>
+		<li>텃새 - ptak osiadły</li>
+		<li>섬 - wyspa</li>
+		<li>발견하다 - odkryć (np. gatunek)</li>
+		<li>옮기다 - przenieść</li>
+		<li>지역 - obszar</li>
+		<li>장거리 - długa odległość</li>
+		<li>이동 - przemieszczanie się</li>
+		<li>거의 - prawie</li>
+		<li>전문가 - ekspert, specjalista</li>
+		<li>태풍 - tajfun</li>
+		<li>휩쓸리다 - zostać porwanym (np. przez wiatr)</li>
+		<li>추측하다 - domyślić się, zgadnąć</li>
+		<li>드물다 - być rzadkim</li>
+		<li>사례 - przypadek</li>
+		<li>언급하다 - wspomnieć (o czymś)</li>
+		<li>사라지다 - zniknąć</li>
+		<li>관찰하다 - obserwować</li>
+		<li>부상 - obrażenie, uraz</li>
+		<li>보호하다 - chronić</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>얼마 전 일본에서만 사는 텃새 두 마리가 한국의 작은 섬에서 발견됐다. 텃새는 자리를 옮기지 않고 한 지역에서만 살기 때문에 장거리 이동을 거의 하지 않는다. 따라서 전문가는 이번에 발견된 텃새가 태풍에 휩쓸려 한국에 온 것으로 추측된다며 이 섬에서 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 것이 매우 보기 드문 사례라고 언급했다.</p>
+	</div>
+	<ol>
+		<li>살던 텃새가 줄어든</li>
+		<li>한국의 텃새가 사라진</li>
+		<li>일본의 텃새가 관찰된</li>
+		<li>부상당한 텃새가 보호된</li>
+	</ol>
+</div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h2>[19~20]. 다음을 읽고 물음에 답하십시오.</h2> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
-	<!-- </div> -->
-	<!-- <h3>19. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h3> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>20. 이 글의 내용과 같은 것을 고르십시오.</h3> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[19~20]. 다음을 읽고 물음에 답하십시오.</h2>
+	<ul>
+		<li>과학자 - naukowiec</li>
+		<li>공헌 - wkład</li>
+		<li>-도 - poziom</li>
+		<li>연구 - badanie (np. naukowe)</li>
+		<li>쏟다 - włożyć (np. energię w coś)</li>
+		<li>구성원 - członek (np. zespołu)</li>
+		<li>기대하다 - oczekiwać (np. że coś się stanie)</li>
+		<li>진행하다 - prowadzić (np. badania)</li>
+		<li>결과 - wynik, rezultat</li>
+		<li>예상 - założenie</li>
+		<li>반비례하다 - być odwrotnie proporcjonalnym</li>
+		<li>이루어지다 - składać się</li>
+		<li>잠재적 - potencjalny</li>
+		<li>기대치 - oczekiwania</li>
+		<li>유사하다 = 같다</li>
+		<li>영향을 미치다 - mieć wpływ (na coś)</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>한 과학자가 개인의 사회 공헌도에 대한 연구를 했다. 개인이 쏟을 수 있는 힘의 크기는 구성원의 수가 많아질수록 늘어날 것이라고 기대하고 연구를 진행했다. 하지만 연구 결과는 예상과 달랐다. 그룹의 구성원 수와 그들이 쏟아 부은 힘의 크기는 반비례했다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 2명으로 이루어진 그룹이 잠재적인 기대치를 가장 많이 사용한 것으로 나타났다.</p>
+	</div>
+	<h3>19. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h3>
+	<ol>
+		<li>드디어</li>
+		<li>오히려</li>
+		<li>어쩌면</li>
+		<li>반드시</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>20. 이 글의 내용과 같은 것을 고르십시오.</h3>
+	<ol>
+		<li>구성원의 수가 많을수록 개인의 공헌도는 낮아졌다.</li>
+		<li>연구 결과는 처음에 예상했던 것과 유사하게 나타났다.</li>
+		<li>이 연구는 사회가 개인에게 미치는 영향에 대한 것이다.</li>
+		<li>2명으로 이루어진 그룹은 개인적인 노력을 하지 않았다.</li>
+	</ol>
+</div>
 
 </body></html>
 
