--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -191,8 +191,8 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="3">Class</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">coffee culture</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/9">중1 손에 대용량 커피…"싸고 덜 졸려서" 매일 사먹는 아이들</a></td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
