--- a/uj/index.html
+++ b/uj/index.html
@@ -99,6 +99,7 @@
 <h3>Warsztaty tłumaczeniowe</h3>
 
 <ul>
+	<li><a href="uj/projekty/wt/2025">[2025] Warsztaty tłumaczeniowe - grupa 2</a></li>
 	<li><a href="uj/projekty/wt/2024">[2024] Warsztaty tłumaczeniowe - grupa 2</a></li>
 </ul>
 
