--- a/uj/index.html
+++ b/uj/index.html
@@ -120,6 +120,12 @@
 
 <h2>Referaty</h2>
 
+<h3>Korean Culture, History and Politics, International Jagiellonian University Conference on Korean Studies</h3>
+
+<ul>
+	<li><a href="uj/referaty/uj/2025">[2025] Hierarchy in Korean Society in the Example of Ways of Greeting</a></li>
+</ul>
+
 <h3>계명 한국어교육 글로벌 컬로퀴엄</h3>
 
 <ul>
