--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -309,8 +309,8 @@
 			<tr>
 				<th scope="row">13</th>
 				<td>18 czerwca 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(10.15–11.15, s. 2.02)</nobr></a></td>
-				<td class="schedule-exam" colspan="2">?, psychologia</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/3">Egzamin <nobr>(10.15–11.15, s. 2.02)</nobr></a></td>
+				<td class="schedule-exam" colspan="2">baśnie i legendy, psychologia</td>
 			</tr>
 		</tbody>
 	</table>
@@ -364,7 +364,7 @@
 				<td rowspan="2">5 czerwca 2025</td>
 			</tr>
 			<tr>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium<!--/a--></td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/znaki/2">Kolokwium</a></td>
 				<td class="schedule-exam">分, 文</td>
 			</tr>
 			<tr>
@@ -376,7 +376,7 @@
 			<tr>
 				<th scope="row">9</th>
 				<td>17 czerwca 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(11.00–12.00, s. 2.02)</nobr></a></td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/znakik/2">Egzamin <nobr>(11.00–12.00, s. 2.02)</nobr></a></td>
 				<td class="schedule-exam">文, 食</td>
 			</tr>
 		</tbody>
