--- a/uj/zajecia/24-25z/klc2/index.html
+++ b/uj/zajecia/24-25z/klc2/index.html
@@ -75,56 +75,92 @@
 				<th scope="row">1</th>
 				<td>7 October 2024</td>
 				<td class="schedule-lecture">Class 1</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제1과</td>
+				<td class="schedule-lecture" rowspan="3">세종한국어 회화 2 제1과</td>
 			</tr>
 			<tr>
 				<th scope="row">2</th>
 				<td>14 October 2024</td>
 				<td class="schedule-lecture">Class 2</td>
 			</tr>
-		<tbody>
-		</tbody>
 			<tr>
 				<th scope="row">3</th>
 				<td>21 October 2024</td>
 				<td class="schedule-lecture">Class 3</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제2과</td>
 			</tr>
+		<tbody>
+		</tbody>
 			<tr>
 				<th scope="row">4</th>
 				<td>28 October 2024</td>
 				<td class="schedule-lecture">Class 4</td>
+				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제2과</td>
 			</tr>
-		<tbody>
-		</tbody>
 			<tr>
 				<th scope="row">5</th>
 				<td>4 November 2024</td>
 				<td class="schedule-lecture">Class 5</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제3과</td>
-			</tr>
-			<tr>
-				<th scope="row">6</th>
-				<td>18 November 2024</td>
-				<td class="schedule-lecture">Class 6</td>
 			</tr>
 		<tbody>
 		</tbody>
 			<tr>
+				<th scope="row">6</th>
+				<td>18 November 2024</td>
+				<td class="schedule-lecture">Class 6</td>
+				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제3과</td>
+			</tr>
+			<tr>
 				<th scope="row">7</th>
 				<td>25 November 2024</td>
 				<td class="schedule-lecture">Class 7</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제4과</td>
 			</tr>
+		<tbody>
+		</tbody>
 			<tr>
-				<th scope="row" rowspan="2">8</th>
+				<th scope="row" rowspan="11">8</th>
 				<td>2 December 2024</td>
 				<td class="schedule-lecture">Class 8</td>
+				<td class="schedule-lecture">세종한국어 회화 2 제4과</td>
 			</tr>
 			<tr>
-				<td>6 December 2024 <nobr>(6:30-8:00 PM, room 0.05)</nobr></td>
+				<td rowspan="10">3 December 2024 <nobr>(room -1.15)</nobr></td>
 				<td class="schedule-exam">Exam</td>
 				<td class="schedule-exam">Midterm Examination</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:00–10:10</td>
+				<td class="schedule-exam">Mirowska Agnieszka</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:10–10:20</td>
+				<td class="schedule-exam">Baranowski Michał</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:20–10:30</td>
+				<td class="schedule-exam">Trajdos Julia</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:30–10:40</td>
+				<td class="schedule-exam">Kruszewska Maja</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:40–10:50</td>
+				<td class="schedule-exam">Grabowska Patrycja</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:50–11:00</td>
+				<td class="schedule-exam">Mądra Maria</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">11:00–11:10</td>
+				<td class="schedule-exam">Łoś Karol</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">11:10–11:20</td>
+				<td class="schedule-exam">Savitska Viktoriia</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">11:20–11:30</td>
+				<td class="schedule-exam">Dubert Karolina</td>
 			</tr>
 		<tbody>
 		</tbody>
@@ -132,33 +168,33 @@
 				<th scope="row">9</th>
 				<td>9 December 2024</td>
 				<td class="schedule-lecture">Class 9</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제5과</td>
+				<td class="schedule-lecture">세종한국어 회화 2 제4과</td>
 			</tr>
+		<tbody>
+		</tbody>
 			<tr>
 				<th scope="row">10</th>
 				<td>16 December 2024</td>
 				<td class="schedule-lecture">Class 10</td>
+				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제5과</td>
 			</tr>
-		<tbody>
-		</tbody>
 			<tr>
 				<th scope="row">11</th>
 				<td>13 January 2025</td>
 				<td class="schedule-lecture">Class 11</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제6과</td>
-			</tr>
-			<tr>
-				<th scope="row">12</th>
-				<td>20 January 2025</td>
-				<td class="schedule-lecture">Class 12</td>
 			</tr>
 		<tbody>
 		</tbody>
 			<tr>
+				<th scope="row">12</th>
+				<td>20 January 2025</td>
+				<td class="schedule-lecture">Class 12</td>
+				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제6과</td>
+			</tr>
+			<tr>
 				<th scope="row">13</th>
 				<td>27 January 2025</td>
 				<td class="schedule-lecture">Class 13</td>
-				<td class="schedule-lecture">Revision</td>
 			</tr>
 		<tbody>
 		</tbody>
