--- a/uj/zajecia/24-25z/ljk4/index.html
+++ b/uj/zajecia/24-25z/ljk4/index.html
@@ -116,7 +116,7 @@
 			<tr>
 				<th scope="row" rowspan="2">7</th>
 				<td rowspan="2">25 listopada 2024</td>
-				<td class="schedule-exam" colspan="2">Kolokwium 2</td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25z/ljk4/testy/2">Kolokwium 2</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 7</td>
