--- a/uj/zajecia/24-25z/ljk4/zajecia/3/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/3/index.html
@@ -138,118 +138,109 @@
 	</ol>
 </div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h2>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h2> -->
-	<!-- <h3>9.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div> -->
-		<!-- <img src="uj/zajecia/24-25z/ljk4/zajecia/2/img/9.png" alt="9"> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>10.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div> -->
-		<!-- <img src="uj/zajecia/24-25z/ljk4/zajecia/2/img/10.png" alt="10"> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>11.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>12.</h3> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p></p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h2>
+	<h3>9.</h3>
+	<ul>
+		<li>법 = 방법</li>
+		<li>검진 - badania lekarskie</li>
+		<li>수면 = 잠</li>
+		<li>여기다 = 생각하다</li>
+	</ul>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/3/img/9.png" alt="9">
+	</div>
+	<ol>
+		<li>여성은 잠보다 운동을 더 중요하게 여긴다.</li>
+		<li>남녀 모두 자는 것을 가장 중요하게 생각한다.</li>
+		<li>아침을 먹는 사람은 여성보다 남성이 더 많다.</li>
+		<li>남성은 밥보다 건강 검진을 더 많이 선택했다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>10.</h3>
+	<ul>
+		<li>청소년 - nastolatek</li>
+		<li>과학 - nauka (zdobywanie wiedzy)</li>
+		<li>동아리 - klub</li>
+		<li>지원 - wsparcie, wspomaganie</li>
+		<li>사업 - projekt</li>
+		<li>희망 - nadzieja</li>
+		<li>응원하다 - kibicować</li>
+		<li>신청 - zapisy</li>
+		<li>대상 - cel, grupa docelowa</li>
+		<li>이상 - ponad</li>
+		<li>교사 - nauczyciel (w szkole)</li>
+		<li>금액 - kwota</li>
+		<li>최대 - maksimum</li>
+		<li>계속되다 - trwać (np. przez jakiś czas)</li>
+		<li>구성되다 - składać się</li>
+		<li>비 = 비용 - koszt</li>
+		<li>인원 - liczba (np. członków organizacji)</li>
+	</ul>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/3/img/10.png" alt="10">
+	</div>
+	<ol>
+		<li>동아리 지원은 일 년 동안 계속된다.</li>
+		<li>동아리는 고등학생들로만 구성되어야 한다.</li>
+		<li>동아리 활동비는 이백만 원까지 받을 수 있다.</li>
+		<li>동아리 인원이 두세 명인 경우에도 신청할 수 있다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>11.</h3>
+	<ul>
+		<li>가구 = 집</li>
+		<li>정도 - około</li>
+		<li>감소하다 = 줄다 - zmniejszać się (np. liczbowo)</li>
+		<li>배달하다 - dostarczać (np. paczkę)</li>
+		<li>한편 - nawiasem mówiąc</li>
+		<li>(설문)조사 - ankieta</li>
+		<li>진행되다 - odbywać się</li>
+		<li>방문하다 - odwiedzać</li>
+		<li>절반 - połowa</li>
+		<li>대상 - grupa docelowa</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>종이 신문을 읽는 가구가 계속 감소하고 있는 것으로 나타났다. 종이 신문을 읽는 집은 지난해보다 5% 정도 감소해서 다섯 집 중 한 집만이 배달해서 읽고 있었다. 인터넷으로 언제든지 뉴스를 볼 수 있게 되면서 종이 신문을 보는 사람이 감소하고 있는 것이다. 한편 이번 조사는 지난해에 조사에 참여한 집으로 전화를 거는 방식으로 진행되었다.</p>
+	</div>
+	<ol>
+		<li>이번 조사는 직접 방문해서 조사하는 방식을 사용했다.</li>
+		<li>종이 신문을 읽는 사람이 줄면서 인터넷의 사용도 줄었다.</li>
+		<li>조사된 가구 중에서 절반은 집으로 배달되는 신문을 읽는다.</li>
+		<li>이번 조사와 지난해 조사는 서로 같은 가구를 대상으로 했다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>12.</h3>
+	<ul>
+		<li>운영하다 - prowadzić (np. restaurację)</li>
+		<li>사연 = 이야기/사정/이유</li>
+		<li>잔잔하다 - być głębokim (np. o uczuciach)</li>
+		<li>감동 - wzruszenie</li>
+		<li>최근 - ostatnio</li>
+		<li>빗길 = 비가 내리는 길</li>
+		<li>미끄러지다 - poślizgnąć się</li>
+		<li>사고 - wypadek</li>
+		<li>다치다 - doznać obrażeń</li>
+		<li>피해 - szkody, obrażenia</li>
+		<li>망가지다 - zepsuć się</li>
+		<li>전하다 - przekazać</li>
+		<li>주문하다 - zamówić</li>
+		<li>취소하다 - odwołać (np. zamówienie)</li>
+		<li>연락하다 - kontaktować się</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>피자 가게를 운영하는 김민수 씨의 사연이 잔잔한 감동을 주고 있다. 최근 김 씨는 피자를 배달하러 가다가 오토바이가 빗길에 미끄러지는 사고를 당했다. 다행히 사람이 다치는 피해는 없었지만 피자가 망가져서 배달에 문제가 생겼다. 배달이 늦어지는 것에 대해 김 씨가 고객에게 연락하자 고객은 “천천히 오셔도 돼요. 몸은 괜찮나요?”라며 따뜻한 말부터 전했다고 한다.</p>
+	</div>
+	<ol>
+		<li>고객은 주문한 피자를 취소하겠다고 말했다.</li>
+		<li>사고가 생겨서 배달 중이던 피자가 망가졌다.</li>
+		<li>오토바이가 빗길에 미끄러져서 김 씨가 다쳤다.</li>
+		<li>김 씨는 피자를 시킨 고객에게 연락하다 사고가 났다.</li>
+	</ol>
+</div>
 
 <!-- <div class="exam-question"> -->
 	<!-- <h2>[13~15]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h2> -->
