--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -124,30 +124,35 @@
 				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25z/assk/zajecia/4">K-pop</a></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="3">5</th>
-				<td rowspan="3">4 listopada 2024</td>
+				<th scope="row" rowspan="2">5</th>
+				<td rowspan="2">4 listopada 2024</td>
 			</tr>
 			<tr>
 				<td class="schedule-exam">Kolokwium 1</td>
 				<td class="schedule-exam"><a href="uj/zajecia/24-25z/assk/testy/1">muzyka, malarstwo, literatura</a></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">Zajęcia 5</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/5">filmy</a></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">6</th>
 				<td>18 listopada 2024</td>
+				<td class="schedule-lecture">Zajęcia 5</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/5">filmy</a></td>
+			</tr>
+		</tbody>
+		<tbody>
+			</tr>
+			<tr>
+				<th scope="row">7</th>
+				<td>25 listopada 2024</td>
 				<td class="schedule-lecture">Zajęcia 6</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">7</th>
-				<td rowspan="2">25 listopada 2024</td>
+				<th scope="row" rowspan="2">8</th>
+				<td rowspan="2">2 grudnia 2024</td>
 				<td class="schedule-exam">Kolokwium 2</td>
 				<td class="schedule-exam"></td>
 			</tr>
@@ -157,19 +162,10 @@
 			</tr>
 		</tbody>
 		<tbody>
-			</tr>
-			<tr>
-				<th scope="row">8</th>
-				<td>2 grudnia 2024</td>
-				<td class="schedule-lecture">Zajęcia 8</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">9</th>
 				<td>9 grudnia 2024</td>
-				<td class="schedule-lecture">Zajęcia 9</td>
+				<td class="schedule-lecture">Zajęcia 8</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
@@ -181,7 +177,7 @@
 				<td class="schedule-exam"></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">Zajęcia 10</td>
+				<td class="schedule-lecture">Zajęcia 9</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
@@ -190,7 +186,7 @@
 				<th scope="row" rowspan="5">11</th>
 				<td rowspan="5">13 stycznia 2025</td>
 				<td class="schedule-presentation">Prezentacja 1</td>
-				<td class="schedule-presentation">Yuliya Davydzenka</td>
+				<td class="schedule-presentation">Yuliya Davydzenka - Koreańska architektura na przykładzie tradycyjnego domu <i>hanok</i></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 2</td>
@@ -199,6 +195,10 @@
 			<tr>
 				<td class="schedule-presentation">Prezentacja 3</td>
 				<td class="schedule-presentation">Miłosz Madoń</td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 4</td>
+				<td class="schedule-presentation">Joanna Latuszek - Tradycyjne koreańskie ceremonie ślubne</td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -210,7 +210,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 5</td>
-				<td class="schedule-presentation">Jagoda Tarańska</td>
+				<td class="schedule-presentation">Jagoda Tarańska - Tradycyjne i współczesne spojrzenie na onggi</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 6</td>
@@ -218,7 +218,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 7</td>
-				<td class="schedule-presentation">Marta Gałązkiewicz</td>
+				<td class="schedule-presentation">Marta Gałązkiewicz - Problem młodych ludzi niebędących w stanie sprostać oczekiwaniom starszych pokoleń na przykładzie muzyki</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 8</td>
@@ -234,7 +234,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 10</td>
-				<td class="schedule-presentation">Adam Świętojański</td>
+				<td class="schedule-presentation">Adam Świętojański - Wczesne rodzicielstwo na przykładzie literatury</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 11</td>
@@ -242,7 +242,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 12</td>
-				<td class="schedule-presentation">Paulina Tapa</td>
+				<td class="schedule-presentation">Paulina Tapa - Kultura wspólnego jedzenia w Korei Południowej na przykładzie fotografii</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 13</td>
