--- a/uj/zajecia/24-25z/assk/zajecia/5/index.html
+++ b/uj/zajecia/24-25z/assk/zajecia/5/index.html
@@ -16,6 +16,7 @@
 <h2>Wonangsori (워낭소리, <i>Old Partner</i>)</h2>
 
 <ul class="gallery">
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/xE2jAWv3_CU"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/xE2jAWv3_CU.webp" alt="Dead on Arrival | Delivery drivers dying from overwork in South Korea"></a></li>
 	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/워낭소리.webp"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/워낭소리.webp" alt="워낭소리.webp"></a></li>
 </ul>
 
@@ -93,15 +94,34 @@
 <p>웃어!</p>
 <p>하나 둘 셋!</p>
 
-<h3>Fragment 3 (00:55:21 - 00:57:18)</h3>
+<!-- <h3>Fragment 3 (00:55:21 - 00:57:18)</h3> -->
 
-<h3>Fragment 4 (00:58:09 - 00:59:54)</h3>
+<!-- <h3>Fragment 4 (00:58:09 - 00:59:54)</h3> -->
+
+<h2>Przepracowanie Koreańczyków</h2>
 
 <ul class="gallery">
 	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/mYU02UPinQk"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/mYU02UPinQk.jpg" alt="Warnings about overwork in South Korea"></a></li>
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/xE2jAWv3_CU"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/xE2jAWv3_CU.webp" alt="Dead on Arrival | Delivery drivers dying from overwork in South Korea"></a></li>
 	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/3N5jpZp4q4Q"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/3N5jpZp4q4Q.webp" alt="South Korea gaming: Death by overwork sparks calls for change - BBC News"></a></li>
-	<!-- <li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/워낭소리.webp"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/워낭소리.webp" alt="워낭소리.webp"></a></li> -->
-	</ul>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/실질은퇴연령.avif"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/실질은퇴연령.avif" alt="실질은퇴연령"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/정년이후일.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/정년이후일.jpg" alt="정년이후일"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/정년이후일이유.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/정년이후일이유.jpg" alt="정년이후일이유"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/사회민주화정도.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/사회민주화정도.png" alt="사회민주화정도"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/삶방식태도.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/삶방식태도.png" alt="삶방식태도"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화1.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화1.png" alt="일하는방식과문화1"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화2.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화2.png" alt="일하는방식과문화2"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화3.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화3.png" alt="일하는방식과문화3"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화4.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화4.png" alt="일하는방식과문화4"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화5.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화5.png" alt="일하는방식과문화5"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화6.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화6.png" alt="일하는방식과문화6"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화7.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화7.png" alt="일하는방식과문화7"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화8.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화8.png" alt="일하는방식과문화8"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화9.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화9.png" alt="일하는방식과문화9"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화10.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화10.png" alt="일하는방식과문화10"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화11.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화11.png" alt="일하는방식과문화11"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화12.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화12.png" alt="일하는방식과문화12"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화13.png"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/일하는방식과문화13.png" alt="일하는방식과문화13"></a></li>
+	<li><a href="uj/zajecia/24-25z/assk/zajecia/5/img/지역별근로시간.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/5/img/지역별근로시간.jpg" alt="지역별근로시간"></a></li>
+</ul>
 
 </body></html>
