--- a/uj/zajecia/24-25z/ljk4/index.html
+++ b/uj/zajecia/24-25z/ljk4/index.html
@@ -120,24 +120,18 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 7</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture" rowspan="3"><a href="uj/zajecia/24-25z/ljk4/zajecia/3">Arkusz 3</a></td>
 			</tr>
-		<tbody>
-		</tbody>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
 				<td>2 grudnia 2024</td>
 				<td class="schedule-lecture">Zajęcia 8</td>
-				<td class="schedule-lecture"></td>
 			</tr>
-		<tbody>
-		</tbody>
 			<tr>
 				<th scope="row">9</th>
 				<td>9 grudnia 2024</td>
 				<td class="schedule-lecture">Zajęcia 9</td>
-				<td class="schedule-lecture"></td>
 			</tr>
 		<tbody>
 		</tbody>
