--- a/uj/zajecia/24-25z/ljk4/zajecia/2/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/2/index.html
@@ -145,7 +145,7 @@
 	<ol>
 		<li>안경</li>
 		<li>침대</li>
-		<li>운동화</li>
+		<li>운동화 <strong class="correct">✓</strong></li>
 		<li>노트북</li>
 	</ol>
 </div>
@@ -174,7 +174,7 @@
 	</div>
 	<ol>
 		<li>축제는 올해 처음 열린다.</li>
-		<li>축제는 주말 이틀 동안 진행된다.</li>
+		<li>축제는 주말 이틀 동안 진행된다. <strong class="correct">✓</strong></li>
 		<li>축제에서 체험을 하려면 예약해야 한다.</li>
 		<li>축제에서 전통 요리를 사 먹을 수 있다.</li>
 	</ol>
@@ -200,7 +200,7 @@
 	<ol>
 		<li>용돈 중 물건 구입비의 비율이 가장 낮았다.</li>
 		<li>학원비 사용은 교통비보다 두 배 이상 많았다.</li>
-		<li>대학생들은 용돈의 절반 이상을 식비로 지출했다.</li>
+		<li>대학생들은 용돈의 절반 이상을 식비로 지출했다. <strong class="correct">✓</strong></li>
 		<li>대학생들은 문화생활비보다 교통비를 더 적게 사용했다.</li>
 	</ol>
 </div>
@@ -227,7 +227,7 @@
 	</div>
 	<ol>
 		<li>이번 지진은 늦은 밤에 일어났다.</li>
-		<li>시민들이 지진을 느껴 상황실에 신고를 했다.</li>
+		<li>시민들이 지진을 느껴 상황실에 신고를 했다. <strong class="correct">✓</strong></li>
 		<li>이번 지진으로 큰 피해를 입은 사람들이 많다.</li>
 		<li>이번 주에는 더 이상 지진이 일어나지 않을 것이다.</li>
 	</ol>
@@ -259,7 +259,7 @@
 		<li>노란 콩나물은 햇빛을 받고 자란다.</li>
 		<li>초록 콩나물은 검은색 천으로 덮어서 키운다.</li>
 		<li>노란 콩나물은 초록 콩나물보다 피로 회복에 좋다.</li>
-		<li>초록 콩나물은 노란 콩나물에 비해 영양가가 많다.</li>
+		<li>초록 콩나물은 노란 콩나물에 비해 영양가가 많다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -292,7 +292,7 @@
 	<ol>
 		<li>(나)-(가)-(라)-(다)</li>
 		<li>(나)-(라)-(가)-(다)</li>
-		<li>(라)-(가)-(다)-(나)</li>
+		<li>(라)-(가)-(다)-(나) <strong class="correct">✓</strong></li>
 		<li>(라)-(다)-(가)-(나)</li>
 	</ol>
 </div>
@@ -317,7 +317,7 @@
 		<p>(라) 이 공간을 이용하는 사람이 늘면서 회사의 이미지도 좋아지고 있다.</p>
 	</div>
 	<ol>
-		<li>(가)-(다)-(나)-(라)</li>
+		<li>(가)-(다)-(나)-(라) <strong class="correct">✓</strong></li>
 		<li>(나)-(라)-(다)-(가)</li>
 		<li>(다)-(나)-(라)-(가)</li>
 		<li>(라)-(나)-(가)-(다)</li>
